config: move frontend URL to environment config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.expiration=3600000
 
 app.upload.dir=uploads/
+frontend.url=http://localhost:5173
