--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.application.name=getTentor
 # spring.datasource.password=
 
 # JPA / Hibernate
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# jwt.expiration=3600000
+jwt.expiration=3600000
 
 # app.upload.dir=uploads/
 # frontend.url=http://localhost:5173
@@ -19,10 +19,6 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=${JPA_DDL}
-spring.jpa.show-sql=${SHOW_SQL}
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
-
-jwt.expiration=${JWT_EXPIRATION}
+# jwt.expiration=${JWT_EXPIRATION}
 app.upload.dir=${UPLOAD_DIR}
 frontend.url=${FRONTEND_URL}
