--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ jwt.expiration=3600000
 # app.upload.dir=uploads/
 # frontend.url=http://localhost:5173
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/gettentor}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
 
 # jwt.expiration=${JWT_EXPIRATION}
-app.upload.dir=${UPLOAD_DIR}
-frontend.url=${FRONTEND_URL}
+app.upload.dir=${UPLOAD_DIR:uploads/}
+frontend.url=${FRONTEND_URL:http://localhost:5173}
