--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.datasource.password=${DB_PASSWORD:}
 
 # jwt.expiration=${JWT_EXPIRATION}
 app.upload.dir=${UPLOAD_DIR:uploads/}
-frontend.url=${FRONTEND_URL:http://localhost:5173}
+frontend.url=${FRONTEND_URL}
