--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 jwt.expiration=3600000
 
-# app.upload.dir=uploads/
-# frontend.url=http://localhost:5173
+app.upload.dir=uploads/
+FRONTEND_URL=http://localhost:5173
 
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/gettentor}
 spring.datasource.username=${DB_USERNAME:root}
