--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=getTentor
 
 # Koneksi database
-spring.datasource.url=jdbc:mysql://localhost:3306/gettentor
+spring.datasource.url=jdbc:mysql://localhost:3306/gettentor1
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -9,6 +9,14 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=REDACTED
+spring.mail.password=REDACTED
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.expiration=3600000
 
