fix minor problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.expiration=3600000
 
 app.upload.dir=uploads/
-FRONTEND_URL=http://localhost:5173
+frontend.url=http://localhost:5173
 
 # spring.datasource.url=${DB_URL}
 # spring.datasource.username=${DB_USERNAME}
