--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=getTentor
 
 # Koneksi database
-spring.datasource.url=jdbc:mysql://localhost:3306/gettentor1
+spring.datasource.url=jdbc:mysql://localhost:3306/gettentor
 spring.datasource.username=root
 spring.datasource.password=
 
