--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=getTentor
 
 # Koneksi database
 spring.datasource.url=jdbc:mysql://localhost:3306/gettentor
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=Lelemantab
+spring.datasource.password=pecel123
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
