--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=getTentor
+spring.application.name=gettentor
 
 # Koneksi database
 spring.datasource.url=jdbc:mysql://localhost:3306/gettentor
-spring.datasource.username=Lelemantab
+spring.datasource.username=lelemantab
 spring.datasource.password=pecel123
 
 # JPA / Hibernate
