--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gettentor
 
 # Koneksi database
-spring.datasource.url=jdbc:mysql://localhost:3306/gettentor
+spring.datasource.url=jdbc:mysql://mysql-db:3306/gettentor
 spring.datasource.username=lelemantab
 spring.datasource.password=pecel123
 
