--- a/compose.yaml
+++ b/compose.yaml
@@ -8,11 +8,34 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
+  mysql-db:
+    image: mysql:8.0
+    container_name: mysql-db
+    environment:
+      MYSQL_ROOT_PASSWORD: lelemulya
+      MYSQL_DATABASE: gettentor
+      MYSQL_USER: lelemantab
+      MYSQL_PASSWORD: pecel123
+    networks:
+      - lelenetwork
+    ports:
+      - "3306:3306"
+
   server:
     build:
       context: .
+    container_name: server-1
+    depends_on:
+      - mysql-db
     ports:
-      - 8080:8080
+      - "8080:8080"
+    networks:
+      - lelenetwork
+
+networks:
+  lelenetwork:
+    driver: bridge
+
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
