Modify datasource URL for MySQL connection
Updated database connection URL to disable SSL and allow public key retrieval.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gettentor
 
 # Koneksi database
-spring.datasource.url=jdbc:mysql://mysql-db:3306/gettentor
+spring.datasource.url=jdbc:mysql://mysql-db:3306/gettentor?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=lelemantab
 spring.datasource.password=pecel123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
