--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=alami
-spring.mail.password=alami
+spring.mail.username=gettentor27@gmail.com
+spring.mail.password=ajfjvrysqvyztngt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.expiration=3600000
 
-app.upload.dir=uploads/
+app.upload.dir=/uploads
 frontend.url=http://localhost:5173
 
 # spring.datasource.url=${DB_URL}
